--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Poscard Generator</title>
+    <title>Postcard Creator</title>
   </head>
   <body>
     <div id="root"></div>
